private_network.yml
Parameters:
  EnvironmentName: 
    Description: An environment name that will be prefixed to resource names
    Type: String

  VpcCIDR:
    Description: Please enter the IP range (CIDR notation) for this VPC
    Type: String
    Default: 10.0.0.0/16

  PrivateSubnet1CIDR:
    Description: Please enter the IP range (CIDR notation) for the private subnet in the first AZ
    Type: String
    Default: 10.0.2.0/24

  PrivateSubnet2CIDR:
    Description: Please enter the IP range (CIDR notation) for the private subnet in the second AZ
    Type: String
    Default: 10.0.3.0/24

  OnPremGateway:
    Description: Please enter the IP address of the on-prem VPN Appliance
    Type: String
    Default: 1.2.3.4


Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCIDR
      EnableDnsHostnames: true
      Tags:
        - Key: name
          Value: !Ref EnvironmentName

  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [0, !GetAZs '']
      CidrBlock: !Ref PrivateSubnet1CIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} Private Subnet (AZ1)

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [1, !GetAZs '']
      CidrBlock: !Ref PrivateSubnet2CIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} Private Subnet (AZ2)

  # AWS::EC2::RouteTable - Specifies a route table for a specified 
  # VPC. After you create a route table, you can add routes and 
  # associate the table with a subnet.
  PrivateRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties: 
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} Private Route Table (AZ1)

  # AWS::EC2::Route - Specifies a route in a route-table within a VPC. 
  # You must specify either DestinationCidrBlock or DestinationIpv6CidrBlock, 
  # plus the ID of one of the target resources. If you create a route that 
  # references a transit gateway in the same template where you create 
  # the transit gateway, you must declare a dependency on the transit 
  # gateway attachment. The route table cannot use the transit gateway 
  # until it has successfully attached to the VPC. 

  DefaultPrivateRoute1:
    DependsOn: AttachVpnGateway
    Type: AWS::EC2::Route
    Properties: 
      RouteTableId: !Ref PrivateRouteTable1
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref VPNGW

  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      SubnetId: !Ref PrivateSubnet1

  # vpc
  PrivateRouteTable2:
    Type: AWS::EC2::RouteTable
    Properties: 
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} Private Route Table (AZ1)

  # route and gw
  DefaultPrivateRoute2:
    DependsOn: AttachVpnGateway
    Type: AWS::EC2::Route
    Properties: 
      RouteTableId: !Ref PrivateRouteTable2
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref VPNGW

  # routetable and subnet
  PrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      SubnetId: !Ref PrivateSubnet2

  # AWS::EC2::VPNConnection - Specifies a VPN connection between 
  # a virtual private gateway and a VPN customer gateway or a 
  # transit gateway and a VPN customer gateway.

  # Type: The type of VPN connection.
  # Required: Yes
  # Type: String
  # Allowed values: ipsec.1

  OurVPN:
    Type: AWS::EC2::VPNConnection
    Properties: 
      Type: ipsec.1
      StaticRoutesOnly: true
      CustomerGatewayId: !Ref ONPREMGW
      VpnGatewayId: !Ref VPNGW

  # AWS::EC2::VPNGateway - Specifies a virtual private gateway. 
  # A virtual private gateway is the endpoint on the VPC side 
  # of your VPN connection. You can create a virtual private 
  # gateway before creating the VPC itself.
  VPNGW:
    Type: AWS::EC2::VPNGateway
    Properties:
      Type: ipsec.1
      Tags:
        - Key: Name
          Value: !Sub "${EnvironmentName} VPN GW"

  # VPCGatewayAttachment - Attaches an internet gateway or 
  # a virtual private gateway to a VPC, enabling connectivity 
  # between the internet and the VPC.
  AttachVpnGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      VpnGatewayId: !Ref VPNGW
  
  # CustomerGateway - 
  ONPREMGW:
    Type: AWS::EC2::CustomerGateway
    Properties:
      BgpAsn : 65000
      IpAddress: !Ref 'OnPremGateway'
      Type: ipsec.1
      Tags:
        - Key: Name
          Value: !Sub "${EnvironmentName} On Prem Gateway"

Outputs:
  VPC:
    Description: A reference to the created VPC
    Value: !Ref VPC
    Export:
      Name: !Sub ${EnvironmentName}-VPCID

  VPNGW:
    Description: A reference to the created VPNGateway
    Value: !Ref VPNGW
    Export:
      Name: !Sub ${EnvironmentName}-VPN-GWID

  AttachVpnGW:
    Description: A reference to the created VPNGatewayAttachment
    Value: !Ref AttachVpnGateway
    Export:
      Name: !Sub ${EnvironmentName}-VPN-ATH-GWID

  ONPREMGW:
    Description: A reference to the created CustomerGW
    Value: !Ref ONPREMGW
    Export:
      Name: !Sub ${EnvironmentName}-VPN-CUSTOMER-GWID

## Add more Eexports as you need for your next stack.
